switch from maven alpine to maven latest

--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   containers:
     - name: maven
-      image: maven:alpine
+      image: maven:latest
       command:
         - cat
       tty: true
