--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -41,21 +41,22 @@
     :why: 
     :versions:
     - 1.2.3
-    :when: 2020-05-31 15:28:30.302764000 Z
+    - 1.5.6
 - - :approve
   - logback-classic
   - :who: 
     :why: 
     :versions:
     - 1.2.3
-    :when: 2020-05-31 15:29:03.621478000 Z
+    - 1.5.6
 - - :approve
   - jakarta.xml.bind-api
   - :who: 
     :why: 
     :versions:
     - 2.3.3
-    :when: 2020-05-31 15:29:19.300525000 Z
+    - 4.0.2
+    :when: 2024-07-01 00:00:00.000000000 Z
 - - :approve
   - jakarta.el
   - :who: 
@@ -69,4 +70,5 @@
     :why: 
     :versions:
     - 1.3.5
-    :when: 2020-05-31 15:29:53.045616000 Z
+    - 2.1.1
+    :when: 2024-07.01 00:00:00.000000000 Z
