--- a/deploy/dso-demo-deploy.yaml
+++ b/deploy/dso-demo-deploy.yaml
@@ -17,10 +17,34 @@ spec:
       labels:
         app: dso-demo
     spec:
+      automountServiceAccountToken: false
+      serviceAccountName: dso-demo
       containers:
       - image: mikejonesey/dso-demo
         name: dso-demo
         ports:
         - containerPort: 8080
-        resources: {}
+        volumeMounts:
+          - name: tmp
+            mountPath: /tmp
+        resources:
+          requests:
+            cpu: "50m"
+            memory: "128Mi"
+          limits:
+            cpu: "250m"
+            memory: "256Mi"
+        securityContext:
+          capabilities:
+            drop:
+              - ALL
+          privileged: false
+          allowPrivilegeEscalation: false
+          runAsNonRoot: true
+          runAsUser: 10001
+          runAsGroup: 10001
+          readOnlyRootFilesystem: true
+      volumes:
+        - name: tmp
+          emptyDir: {}
 status: {}
