update pull pol on docker-tools

--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -23,6 +23,7 @@ spec:
           name: docker-sock
     - name: docker-tools
       image: mikejonesey/docker-tools:latest
+      imagePullPolicy: Always
       command:
         - cat
       tty: true
