--- a/deploy/dso-demo-deploy.yaml
+++ b/deploy/dso-demo-deploy.yaml
@@ -17,7 +17,7 @@ spec:
       labels:
         app: dso-demo
     spec:
-      automountServiceAccountToken: false
+      #automountServiceAccountToken: false # allow vault to add tokens
       serviceAccountName: dso-demo
       containers:
       - image: mikejonesey/dso-demo
