add hasicorp annotations

--- a/deploy/dso-demo-deploy.yaml
+++ b/deploy/dso-demo-deploy.yaml
@@ -14,6 +14,10 @@ spec:
   template:
     metadata:
       creationTimestamp: null
+      annotations:
+        vault.hashicorp.com/agent-inject: 'true'
+        vault.hashicorp.com/role: 'dso-demo'
+        vault.hashicorp.com/agent-inject-secret-database: 'secret/dso-demo/database'
       labels:
         app: dso-demo
     spec:
